EN-17222: Fix CSS layout problem on error alert

--- a/frontend/app/styles/internal-asset-manager/show.scss
+++ b/frontend/app/styles/internal-asset-manager/show.scss
@@ -19,6 +19,10 @@ body {
   background: $light-grey-6;
 }
 
+.alert.error {
+  clear: both;
+}
+
 .asset_inventory_link_wrapper {
   float: right;
   position: relative;
